Create my first webpage git status

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPER html>
+<!DOCTYPE html>
 
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>My First Webpage</title>
+        <title>Webpage</title>
     </head>
 
     <body>
-
+        
     </body>
 </html>
