Add photo to oddin-links-and-images home and about pages

--- a/my-firs-website/index.html
+++ b/my-firs-website/index.html
@@ -7,8 +7,34 @@
     </head>
 
     <body>
-        <h1>My First Webiste</h1> 
+        <h1>Lorem Ipsum</h1> 
+        
+        <h2>Dolor</h2>
 
-        <p>Shane is a poopy butt</p>
+        <p><strong>Lorem ipsum</strong> dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis <em>nostrud exercitation ullamco laboris 
+        nisi ut aliquip ex ea commodo</em> consequat. Duis aute irure dolor in 
+        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+        culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <!-- This is gibberish-->
+
+        <h3>Metus Aliquam</h3>
+
+        <p><strong>Metus aliquam</strong> eleifend mi in. Pretium nibh ipsum consequat nisl 
+            vel pretium lectus quam. Nibh cras pulvinar mattis nunc sed blandit. 
+            Egestas dui id ornare arcu odio ut. Sed faucibus turpis in eu mi bibendum. 
+            Laoreet sit amet cursus sit amet dictum sit amet justo. Tempor id eu nisl nunc. 
+            Vel quam elementum pulvinar etiam non quam. Viverra nibh cras pulvinar mattis 
+            nunc sed blandit libero. Velit laoreet id donec ultrices tincidunt arcu non. 
+            Libero volutpat sed cras ornare arcu. Sit amet commodo nulla facilisi nullam 
+            vehicula. Etiam erat velit scelerisque in. Vel quam elementum pulvinar etiam 
+            non quam lacus suspendisse. Pellentesque elit eget gravida cum. Fames ac turpis egestas 
+            integer eget. Habitant morbi tristique senectus et netus et malesuada fames.  
+            Nunc sed velit dignissim sodales ut. Eleifend mi in nulla posuere sollicitudin 
+            aliquam.</p>
+        </ol>
     </body>
 </html>
