--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -16,6 +16,6 @@
         <a href="./pages/about.html">About</a>
 
         <!-- Image -->
-        <img src="images/dog.jpg">
+        <img src="images/dog.jpg" alt="Charles the Dog">
     </body>
 </html>
