--- a/html-practice/html-boilerplate/index.html
+++ b/html-practice/html-boilerplate/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Webpage</title>
+        <title>First Webpage</title>
     </head>
 
     <body>
-        <h1></h1>
+        <h1>Hello World!</h1>
     </body>
 </html>
